--- a/sample.html
+++ b/sample.html
@@ -1260,9 +1260,9 @@
                 if (device.hub) { list += "USB Hub"; }
 
                 list += "<p>" +
-                        "   VendorID: <code>0x" + device.vendorId + "</code>" +
-                        usbButton(["usbVendor", "usbProduct"], [device.vendorId, device.productId]) + "<br/>" +
-                        "   ProductID: <code>0x" + device.productId + "</code><br/>";
+                    "   VendorID: <code>0x" + device.vendorId + "</code>" +
+                    usbButton(["usbVendor", "usbProduct"], [device.vendorId, device.productId]) + "<br/>" +
+                    "   ProductID: <code>0x" + device.productId + "</code><br/>";
 
                 if (device.manufacturer) { list += "   Manufacturer: <code>" + device.manufacturer + "</code><br/>"; }
                 if (device.product) { list += "   Product: <code>" + device.product + "</code><br/>"; }
@@ -1275,65 +1275,111 @@
     }
 
     function listUsbDeviceInterfaces() {
-        qz.usb.listInterfaces($("#usbVendor").val(), $("#usbProduct").val()).then(function(data) {
-            var list = '';
-            for(var i = 0; i < data.length; i++) {
-                list += "&nbsp; <code>0x" + data[i] + "</code>" + usbButton(["usbInterface"], [data[i]]) + "<br/>";
-            }
+        qz.usb.listInterfaces({
+                                  vendorId: $("#usbVendor").val(),
+                                  productId: $("#usbProduct").val()
+                              })
+            .then(function(data) {
+                var list = '';
+                for(var i = 0; i < data.length; i++) {
+                    list += "&nbsp; <code>0x" + data[i] + "</code>" + usbButton(["usbInterface"], [data[i]]) + "<br/>";
+                }
 
-            displayMessage("<strong>Available device interfaces:</strong><br/>" + list);
-        }).catch(displayError);
+                displayMessage("<strong>Available device interfaces:</strong><br/>" + list);
+            }).catch(displayError);
     }
 
     function listUsbInterfaceEndpoints() {
-        qz.usb.listEndpoints($("#usbVendor").val(), $("#usbProduct").val(), $("#usbInterface").val()).then(function(data) {
-            var list = '';
-            for(var i = 0; i < data.length; i++) {
-                list += "&nbsp; <code>0x" + data[i] + "</code>" + usbButton(["usbEndpoint"], [data[i]]) + "<br/>";
-            }
+        qz.usb.listEndpoints({
+                                 vendorId: $("#usbVendor").val(),
+                                 productId: $("#usbProduct").val(),
+                                 interface: $("#usbInterface").val()
+                             })
+            .then(function(data) {
+                var list = '';
+                for(var i = 0; i < data.length; i++) {
+                    list += "&nbsp; <code>0x" + data[i] + "</code>" + usbButton(["usbEndpoint"], [data[i]]) + "<br/>";
+                }
 
-            displayMessage("<strong>Available interface endpoints:</strong><br/>" + list);
-        }).catch(displayError);
+                displayMessage("<strong>Available interface endpoints:</strong><br/>" + list);
+            }).catch(displayError);
     }
 
     function claimUsbDevice() {
-        qz.usb.claimDevice($("#usbVendor").val(), $("#usbProduct").val(), $("#usbInterface").val()).then(function() {
-            displayMessage("USB Device claimed");
-        }).catch(displayError);
+        qz.usb.claimDevice({
+                               vendorId: $("#usbVendor").val(),
+                               productId: $("#usbProduct").val(),
+                               interface: $("#usbInterface").val()
+                           })
+            .then(function() {
+                displayMessage("USB Device claimed");
+            }).catch(displayError);
     }
 
     function checkUsbDevice() {
-        qz.hid.isClaimed($("#usbVendor").val(), $("#usbProduct").val()).then(function(claimed) {
-            displayMessage("USB Device is " + (claimed ? "" : "not ") + "claimed");
-        }).catch(displayError);
+        qz.hid.isClaimed({
+                             vendorId: $("#usbVendor").val(),
+                             productId: $("#usbProduct").val()
+                         })
+            .then(function(claimed) {
+                displayMessage("USB Device is " + (claimed ? "" : "not ") + "claimed");
+            }).catch(displayError);
     }
 
     function sendUsbData() {
-        qz.usb.sendData($("#usbVendor").val(), $("#usbProduct").val(), $("#usbEndpoint").val(), $("#usbData").val()).catch(displayError);
+        qz.usb.sendData({
+                            vendorId: $("#usbVendor").val(),
+                            productId: $("#usbProduct").val(),
+                            endpoint: $("#usbEndpoint").val(),
+                            data: $("#usbData").val()
+                        })
+            .catch(displayError);
     }
 
     function readUsbData() {
-        qz.usb.readData($("#usbVendor").val(), $("#usbProduct").val(), $("#usbEndpoint").val(), $("#usbResponse").val()).then(function(data) {
-            displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
-        }).catch(displayError);
+        qz.usb.readData({
+                            vendorId: $("#usbVendor").val(),
+                            productId: $("#usbProduct").val(),
+                            endpoint: $("#usbEndpoint").val(),
+                            responseSize: $("#usbResponse").val()
+                        })
+            .then(function(data) {
+                displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
+            }).catch(displayError);
     }
 
     function openUsbStream() {
-        qz.usb.openStream($("#usbVendor").val(), $("#usbProduct").val(), $("#usbEndpoint").val(), $("#usbResponse").val(), $("#usbStream").val()).then(function() {
-            pinMessage("Waiting on device", '' + $("#usbVendor").val() + $("#usbProduct").val());
-        }).catch(displayError);
+        qz.usb.openStream({
+                              vendorId: $("#usbVendor").val(),
+                              productId: $("#usbProduct").val(),
+                              endpoint: $("#usbEndpoint").val(),
+                              responseSize: $("#usbResponse").val(),
+                              interval: $("#usbStream").val()
+                          })
+            .then(function() {
+                pinMessage("Waiting on device", '' + $("#usbVendor").val() + $("#usbProduct").val());
+            }).catch(displayError);
     }
 
     function closeUsbStream() {
-        qz.usb.closeStream($("#usbVendor").val(), $("#usbProduct").val(), $("#usbEndpoint").val()).then(function() {
-            $('#' + $("#usbVendor").val() + $("#usbProduct").val()).attr('id', '').html("Stream closed");
-        }).catch(displayError);
+        qz.usb.closeStream({
+                               vendorId: $("#usbVendor").val(),
+                               productId: $("#usbProduct").val(),
+                               endpoint: $("#usbEndpoint").val()
+                           })
+            .then(function() {
+                $('#' + $("#usbVendor").val() + $("#usbProduct").val()).attr('id', '').html("Stream closed");
+            }).catch(displayError);
     }
 
     function releaseUsbDevice() {
-        qz.usb.releaseDevice($("#usbVendor").val(), $("#usbProduct").val()).then(function() {
-            displayMessage("USB Device released");
-        }).catch(displayError);
+        qz.usb.releaseDevice({
+                                 vendorId: $("#usbVendor").val(),
+                                 productId: $("#usbProduct").val()
+                             })
+            .then(function() {
+                displayMessage("USB Device released");
+            }).catch(displayError);
     }
 
 
@@ -1373,43 +1419,90 @@
     }
 
     function claimHidDevice() {
-        qz.hid.claimDevice($("#hidVendor").val(), $("#hidProduct").val()).then(function() {
-            displayMessage("HID Device claimed");
-        }).catch(displayError);
+        qz.hid.claimDevice({
+                               vendorId: $("#hidVendor").val(),
+                               productId: $("#hidProduct").val(),
+                               usagePage: $("#hidUsagePage").val(),
+                               serial: $("#hidSerial").val()
+                           })
+            .then(function() {
+                displayMessage("HID Device claimed");
+            }).catch(displayError);
     }
 
     function checkHidDevice() {
-        qz.hid.isClaimed($("#hidVendor").val(), $("#hidProduct").val()).then(function(claimed) {
-            displayMessage("HID Device is " + (claimed ? "" : "not ") + "claimed");
-        }).catch(displayError);
+        qz.hid.isClaimed({
+                             vendorId: $("#hidVendor").val(),
+                             productId: $("#hidProduct").val(),
+                             usagePage: $("#hidUsagePage").val(),
+                             serial: $("#hidSerial").val()
+                         })
+            .then(function(claimed) {
+                displayMessage("HID Device is " + (claimed ? "" : "not ") + "claimed");
+            }).catch(displayError);
     }
 
     function sendHidData() {
-        qz.hid.sendData($("#hidVendor").val(), $("#hidProduct").val(), $("#hidData").val(), $("#hidReport").val()).catch(displayError);
+        qz.hid.sendData({
+                            vendorId: $("#hidVendor").val(),
+                            productId: $("#hidProduct").val(),
+                            usagePage: $("#hidUsagePage").val(),
+                            serial: $("#hidSerial").val(),
+                            data: $("#hidData").val(),
+                            endpoint: $("#hidReport").val()
+                        })
+            .catch(displayError);
     }
 
     function readHidData() {
-        qz.hid.readData($("#hidVendor").val(), $("#hidProduct").val(), $("#hidResponse").val()).then(function(data) {
-            displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
-        }).catch(displayError);
+        qz.hid.readData({
+                            vendorId: $("#hidVendor").val(),
+                            productId: $("#hidProduct").val(),
+                            usagePage: $("#hidUsagePage").val(),
+                            serial: $("#hidSerial").val(),
+                            responseSize: $("#hidResponse").val()
+                        })
+            .then(function(data) {
+                displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
+            }).catch(displayError);
     }
 
     function openHidStream() {
-        qz.hid.openStream($("#hidVendor").val(), $("#hidProduct").val(), $("#hidResponse").val(), $("#hidStream").val()).then(function() {
-            pinMessage("Waiting on device", '' + $("#hidVendor").val() + $("#hidProduct").val());
-        }).catch(displayError);
+        qz.hid.openStream({
+                              vendorId: $("#hidVendor").val(),
+                              productId: $("#hidProduct").val(),
+                              usagePage: $("#hidUsagePage").val(),
+                              serial: $("#hidSerial").val(),
+                              responseSize: $("#hidResponse").val(),
+                              interval: $("#hidStream").val()
+                          })
+            .then(function() {
+                pinMessage("Waiting on device", '' + $("#hidVendor").val() + $("#hidProduct").val());
+            }).catch(displayError);
     }
 
     function closeHidStream() {
-        qz.hid.closeStream($("#hidVendor").val(), $("#hidProduct").val()).then(function() {
-            $('#' + $("#hidVendor").val() + $("#hidProduct").val()).attr('id', '').html("Stream closed");
-        }).catch(displayError);
+        qz.hid.closeStream({
+                               vendorId: $("#hidVendor").val(),
+                               productId: $("#hidProduct").val(),
+                               usagePage: $("#hidUsagePage").val(),
+                               serial: $("#hidSerial").val()
+                           })
+            .then(function() {
+                $('#' + $("#hidVendor").val() + $("#hidProduct").val()).attr('id', '').html("Stream closed");
+            }).catch(displayError);
     }
 
     function releaseHidDevice() {
-        qz.hid.releaseDevice($("#hidVendor").val(), $("#hidProduct").val()).then(function() {
-            displayMessage("HID Device released");
-        }).catch(displayError);
+        qz.hid.releaseDevice({
+                                 vendorId: $("#hidVendor").val(),
+                                 productId: $("#hidProduct").val(),
+                                 usagePage: $("#hidUsagePage").val(),
+                                 serial: $("#hidSerial").val()
+                             })
+            .then(function() {
+                displayMessage("HID Device released");
+            }).catch(displayError);
     }
 
 
